# deep_learning

./: .gitignore  README.md  bpe.ipynb  cuda.ipynb  download_c4.py  download_github.py  download_pretrain_datasets.py  download_project_gutenberg.py  download_wikipedia.py  lru.ipynb  pretrain_dataset_infos.ipynb  pyproject.toml  requirements.txt  temp.ipynb  try.ipynb
learn-acc-grad/: acc_grad.ipynb
learn-amp/: amp.ipynb  examples.ipynb
learn-datasets/: README.md  arxiv.ipynb  dataloader.ipynb  datasets.ipynb  quickstart.ipynb  stream_dataset.ipynb  to_iterable_dataset.ipynb  tutorial.ipynb
learn-ddp/: example.py  tutorial.py
learn-peft/: README.md  alpaca.ipynb  chatgpt_fine_tune_llama_peft.md  llama_lora.py  llama_qlora.py  lora.py  wmt16.ipynb
learn-pytorch/: checkpoint.tar  dist.ipynb  gather.py  model_weights.pth  save_and_loding_models.ipynb
learn-transformer/: bpe.ipynb  byte_level_bpe.ipynb  byte_level_bpe_tokenizer.json  my_corpus.txt  quick_start.ipynb  test_byte_level_bpe.ipynb  tokenizer.ipynb  train_byte_level_bpe.ipynb  train_byte_level_bpe_tokenizer.py
modules/: __init__.py
mytorch/: __init__.py  config.py  func.py  losses.py  metrics.py  optim.py  training.py  utils.py
optuna/: README.md  optuna.ipynb
rl/: README.md  REINFORCE.ipynb  SARSA.ipynb  cart_pole.py  frozen_lake.py  learn_rl.ipynb  my_SARSA.ipynb  my_monte_caro_actor_critic.ipynb  my_q_learning.ipynb  my_reinforce.ipynb  q_learning.py
tests/: test_bert.py  test_func.py  test_lenet.py  test_linear.py  test_losses.py  test_mlp.py  test_mnist.py  test_module_lenet.py  (+19 more)
(+54 files in other folders)
