[project]
name = "deep-learning"
version = "0.1.0"
description = "My Deep Learning Codes"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # "bitsandbytes>=0.46.1",
    # ✅ bitsandbytes is NOT available on macOS arm64
    "bitsandbytes>=0.46.1; sys_platform != 'darwin'",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "huggingface-hub[cli]>=0.33.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "peft>=0.15.2",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "sacrebleu>=2.5.1",
    "timm>=1.0.17",
    "torchdata>=0.11.0",
]
